Lab3 - MenuActionBar - a ajouter

--- a/AppLabo3/app/src/main/res/values/strings.xml
+++ b/AppLabo3/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AppLabo3</string>
+    <string name="emailTitleID">Mail</string>
+    <string name="callTitleID">Call</string>
+    <string name="searchTitleID">Search</string>
+    <string name="action_settings">Settings</string>
 </resources>
