--- a/AppLabo3/app/src/main/res/values/strings.xml
+++ b/AppLabo3/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="callTitleID">Call</string>
     <string name="searchTitleID">Search</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_child">ChildActivity</string>
+    <string name="childBtnText">Go to child</string>
+    <string name="txtName">Name :</string>
+    <string name="txtAge">Age</string>
 </resources>
